Done some changes